<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/_6sdp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bizstore"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:src="@drawable/subscription"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/_16sdp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="Enjoy a 7 day free trial on\nsubscription!"/>

        <TextView
            android:id="@+id/first"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/red_tickicon"
            android:textSize="12sp"
            android:text="@string/find_popular_venues"
            android:visibility="gone"/>

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/red_tickicon"
            android:textSize="12sp"
            android:text="@string/get_restaurants_deals"
            android:visibility="gone"/>

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/red_tickicon"
            android:textSize="12sp"
            android:text="@string/discounts_on_fav_brands"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_movies_cinemas_etc"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/red_tickicon"
            android:textSize="12sp"
            android:text="@string/movies_cinemas_more"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_sub_charges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/_12sdp"
            android:textSize="12sp"
            android:text="@string/subscription_charges"/>

        <Button
            android:id="@+id/btn_subscribe"
            android:layout_width="@dimen/_210sdp"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="@dimen/_24sdp"
            android:alpha="1.0"
            android:background="@drawable/bg_red"
            android:gravity="center"
            android:text="@string/SUBSCRIBE"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/agree_terms_services"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:textSize="12sp"
            android:text="@string/subscription_terms_services"/>

    </LinearLayout>

</ScrollView>